lab-project/decouple/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: students
  labels:
    app.kubernetes.io/part-of: students-records
