lab-project/decouple/31-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: students
  labels:
    app: web
spec:
  type: LoadBalancer
  selector:
    app: web
  ports:
    - name: http
      port: 80
      targetPort: 3000
